--- a/app/src/main/res/layout/entry.xml
+++ b/app/src/main/res/layout/entry.xml
@@ -26,6 +26,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:clickable="false"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +43,8 @@
         <TextView
             android:id="@+id/entry_name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:clickable="false" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
