--- a/app/src/main/res/layout/wizard_installer_deviceinstaller.xml
+++ b/app/src/main/res/layout/wizard_installer_deviceinstaller.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/wizard_deviceinstaller"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/wizard_deviceinstaller_text"
