--- a/app/src/main/res/layout/wizard_installer_devicetest.xml
+++ b/app/src/main/res/layout/wizard_installer_devicetest.xml
@@ -15,13 +15,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.13"
-        app:srcCompat="@drawable/ic_no" />
+        app:srcCompat="@drawable/ic_no"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/wizard_installer_devicetest_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
