--- a/app/src/main/res/layout/wizard_installer_droidboot.xml
+++ b/app/src/main/res/layout/wizard_installer_droidboot.xml
@@ -18,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.3"
         app:srcCompat="@drawable/ic_droidbooticon"
+        tools:ignore="ContentDescription"
         tools:srcCompat="@drawable/ic_droidbooticon" />
 
     <TextView
