--- a/app/src/main/res/layout/fragment_generalcfg.xml
+++ b/app/src/main/res/layout/fragment_generalcfg.xml
@@ -100,4 +100,15 @@
         app:layout_constraintTop_toBottomOf="@+id/generalcfg_umount"
         app:layout_constraintVertical_bias="0.0" />
 
+    <Button
+        android:id="@+id/debug"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Debug"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/generalcfg_update_bl"
+        app:layout_constraintVertical_bias="1.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
