--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="AppTheme" parent="@style/Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="AppTheme" parent="@style/Theme.Material3.DynamicColors.DayNight.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorSecondary">@color/colorSecondary</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="aboutLibrariesStyle">@style/CustomAboutLibrariesStyle</item>
         <item name="android:statusBarColor">@color/colorAccent</item>
     </style>
+    <style name="Simulator" parent="@style/Theme.Material3.DynamicColors.DayNight.NoActionBar">
+        <item name="android:background">@color/black</item>
+    </style>
 
     <color name="colorPrimary">#FE9200</color>
     <color name="colorSecondary">#FE9200</color>
     <color name="colorAccent" tools:ignore="UnusedResources">#FE9F11</color>
+    <color name="black">#000000</color>
 
 	<style name="CustomAboutLibrariesStyle" parent="AppTheme">
         <!-- AboutLibraries specific values -->
