--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,20 +2,28 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="AppTheme" parent="@style/Theme.Material3.DynamicColors.DayNight.NoActionBar">
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+        <item name="android:windowLayoutInDisplayCutoutMode" tools:targetApi="o_mr1">shortEdges</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorSecondary">@color/colorSecondary</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="aboutLibrariesStyle">@style/CustomAboutLibrariesStyle</item>
         <item name="android:statusBarColor">@color/colorAccent</item>
     </style>
-    <style name="Simulator" parent="@style/Theme.Material3.DynamicColors.DayNight.NoActionBar">
-        <item name="android:background">@color/black</item>
+    <style name="Simulator" parent="@style/AppTheme">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:enforceNavigationBarContrast" tools:targetApi="q">false</item>
+        <item name="android:enforceStatusBarContrast" tools:targetApi="q">false</item>
+        <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:background">@color/red</item>
     </style>
 
     <color name="colorPrimary">#FE9200</color>
     <color name="colorSecondary">#FE9200</color>
     <color name="colorAccent" tools:ignore="UnusedResources">#FE9F11</color>
-    <color name="black">#000000</color>
+    <color name="red">#ff0000</color>
 
 	<style name="CustomAboutLibrariesStyle" parent="AppTheme">
         <!-- AboutLibraries specific values -->
